<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP90_AUTO" Id="{d8645966-d7df-4810-9d03-3321ce50db59}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP90_AUTO
VAR
	
// R_TRIG
	CYLE_STRT					: R_TRIG;
	SUP_VERT_UP					: R_TRIG;
	SUP_HORZ_WRK				: R_TRIG;
// TON
	AFT_SUP_HRZ_WRK				: TON;
	AFT_VERT_PCK_WRK			: TON;
	AFT_PCK_DN					: TON;
	AFT_VRT_PLC_WRK				: TON;
	AFT_GRP_HME					: TON;
	AFT_VRT_SUP_HME				: TON;

//INT
	OP90_STP_NO					: INT;
	OP90_AFT_SUP_HRZ_WRK		: INT;
	OP90_AFT_VRT_PCK_WRK		: INT;
	OP90_AFT_CMP_PCK			: INT;
	OP90_AFT_VRT_PLC_WRK		: INT;
	OP90_AFT_GRP_HME			: INT;
	OP90_AFT_SUP_VRT_HME		: INT;

	
//BOOL

	OP90_LH_CMP_OK				: BOOL;
	OP90_RH_CMP_OK				: BOOL;
	OP90_MVR_IN_POS				: BOOL;
	OP90_PROCESS_DONE			: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF MACHINE_AUTO AND NOT MACHINE_ERR THEN 
	
CYLE_STRT(CLK:=START_PB , Q=> );

IF CYLE_STRT.Q AND NOT AUTO_RUNNING AND NOT STEP_RUNNING AND OP90_ALL_HOME THEN
	OP90_STP_NO							:= 1;
END_IF

CASE OP90_STP_NO OF 
	1:	IF OP90_LH_CMP_PICKED AND OP90_RH_CMP_PICKED THEN
		OP90_STP_NO						:= 30;							
		ELSE
		OP90_A_SRV_HORZ_WRK				:= TRUE;
		OP90_STP_NO						:= 5;		
		END_IF
	
	5:IF (OP90_LH_CMR_OK OR OP90_LH_CMP_PICKED) AND (OP90_RH_CMR_OK OR OP90_RH_CMP_PICKED) AND OP90_SRV_HORZ_WRK_FB THEN
		OP90_STP_NO						:= 10;	   
	   END_IF

	10: IF OP90_LH_CMP_PICKED AND NOT OP90_RH_CMP_PICKED  THEN
		OP90_A_SRV_LHVERT_PCKWRK		:= FALSE;
		OP90_A_SRV_RHVERT_PCKWRK 		:= TRUE;
		OP90_STP_NO						:= 15;
		END_IF
		IF NOT OP90_LH_CMP_PICKED AND  OP90_RH_CMP_PICKED  THEN
		OP90_A_SRV_LHVERT_PCKWRK		:= TRUE;
		OP90_A_SRV_RHVERT_PCKWRK 		:= FALSE;
		OP90_STP_NO						:= 15;
		END_IF		
		IF NOT OP90_LH_CMP_PICKED AND NOT OP90_RH_CMP_PICKED THEN
		OP90_A_SRV_LHVERT_PCKWRK		:= TRUE;
		OP90_A_SRV_RHVERT_PCKWRK 		:= TRUE;
		OP90_STP_NO						:= 15;			
		END_IF
	   
	   
	15: IF OP90_LH_CMP_PICKED AND NOT OP90_RH_CMP_PICKED AND OP90_SRV_RH_VRT_PCKWRK_FB AND AFT_VERT_PCK_WRK.Q  THEN
		OP90_A_RH_GRP_AUTCMD2			:= TRUE;
		OP90_A_RH_GRP_AUTCMD1			:= FALSE;		
		OP90_STP_NO						:= 20;
		END_IF
		IF NOT OP90_LH_CMP_PICKED AND  OP90_RH_CMP_PICKED AND OP90_SRV_LH_VRT_PCKWRK_FB AND AFT_VERT_PCK_WRK.Q THEN
		OP90_A_LH_GRP_AUTCMD2			:= TRUE;
		OP90_A_LH_GRP_AUTCMD1		    := FALSE;
		OP90_STP_NO						:= 20;
		END_IF		
		IF NOT OP90_LH_CMP_PICKED AND NOT OP90_RH_CMP_PICKED AND OP90_SRV_LH_VRT_PCKWRK_FB AND OP90_SRV_RH_VRT_PCKWRK_FB AND AFT_VERT_PCK_WRK.Q THEN
		OP90_A_RH_GRP_AUTCMD2			:= TRUE;
		OP90_A_RH_GRP_AUTCMD1			:= FALSE;
		OP90_A_LH_GRP_AUTCMD2			:= TRUE;
		OP90_A_LH_GRP_AUTCMD1		    := FALSE;
		OP90_STP_NO						:= 20;			
		END_IF

	20: IF AFT_PCK_DN.Q THEN
		OP90_LH_CMP_PICKED              := TRUE;
		OP90_RH_CMP_PICKED				:= TRUE;
		OP90_A_SRV_LHVERT_HME			:= TRUE;
		OP90_A_SRV_RHVERT_HME			:= TRUE;
		OP90_STP_NO						:= 25;		
		END_IF
	   
	25: IF OP90_SRV_LH_VRT_HME_FB AND OP90_SRV_RH_VRT_HME_FB THEN
		OP90_SRV_HORZ_HME_FB			:= TRUE;
		OP90_STP_NO						:= 30;		
		END_IF
		
	30: IF OP90_SRV_HORZ_HME_FB THEN                     	
		IF NOT OP90_MVR_IN_POS THEN  	
		OP90_A_SRV_LHVERT_SPLCWRK		:= TRUE;
		OP90_A_SRV_RHVERT_SPLCWRK		:= TRUE;
 		OP90_STP_NO						:= 35;		
		ELSIF OP90_MVR_IN_POS AND ((OP90_POS1 AND I90_P1_SUP_VERT_CYL_UP )OR(OP90_POS2 AND I90_P2_SUP_VERT_CYL_UP)) THEN
		IF OP90_LH_CMP_OK THEN
		OP90_A_SRV_LHVERT_PLCWRK		:= TRUE;	
		END_IF	                    	
		IF OP90_RH_CMP_OK THEN      	
		OP90_A_SRV_RHVERT_PLCWRK		:= TRUE;	
		END_IF
 		OP90_STP_NO						:= 35;				// CHANGE THE STEP NO
		END_IF
		END_IF
		
	35: IF OP90_MVR_IN_POS AND OP90_SRV_LH_VRT_SPLCWRK_FB AND OP90_SRV_RH_VRT_SPLCWRK_FB AND 
			((OP90_POS1 AND I90_P1_SUP_VERT_CYL_UP )OR(OP90_POS2 AND I90_P2_SUP_VERT_CYL_UP)) THEN
		IF OP90_LH_CMP_OK THEN
		OP90_A_SRV_LHVERT_PLCWRK		:= TRUE;	
		END_IF	                    	
		IF OP90_RH_CMP_OK THEN      	
		OP90_A_SRV_RHVERT_PLCWRK		:= TRUE;	
		END_IF
 		OP90_STP_NO						:= 40;	
		END_IF
		
	40: IF OP90_LH_CMP_OK AND NOT OP90_RH_CMP_OK AND OP90_SRV_LH_VRT_PLCWRK_FB AND AFT_VRT_PLC_WRK.Q THEN
		OP90_A_LH_GRP_AUTCMD2			:= FALSE;
		OP90_A_LH_GRP_AUTCMD1		    := TRUE;
 		OP90_STP_NO						:= 45;	
  		END_IF
		IF NOT OP90_LH_CMP_OK AND  OP90_RH_CMP_OK AND OP90_SRV_RH_VRT_PLCWRK_FB AND AFT_VRT_PLC_WRK.Q THEN
		OP90_A_RH_GRP_AUTCMD2			:= FALSE;
		OP90_A_RH_GRP_AUTCMD1		    := TRUE;
 		OP90_STP_NO						:= 45;
  		END_IF
		IF OP90_LH_CMP_OK AND OP90_RH_CMP_OK AND OP90_SRV_LH_VRT_PLCWRK_FB AND OP90_SRV_RH_VRT_PLCWRK_FB AND AFT_VRT_PLC_WRK.Q THEN
		OP90_A_LH_GRP_AUTCMD2			:= FALSE;
		OP90_A_LH_GRP_AUTCMD1		    := TRUE;
		OP90_A_RH_GRP_AUTCMD2			:= FALSE;
		OP90_A_RH_GRP_AUTCMD1		    := TRUE;
 		OP90_STP_NO						:= 45;			
		END_IF
	
	45: IF OP90_LH_CMP_OK AND NOT OP90_RH_CMP_OK AND I90_RET_LH_GRIPR_CYL_CLSE THEN
																////////////////////////////WRITE XTS AS OK/////////////////////////////																	
 		OP90_STP_NO						:= 50;		
		END_IF
		IF NOT OP90_LH_CMP_OK AND  OP90_RH_CMP_OK AND I90_RET_RH_GRIPR_CYL_CLSE THEN
																////////////////////////////WRITE XTS AS OK/////////////////////////////
 		OP90_STP_NO						:= 50;			
		END_IF
		IF OP90_LH_CMP_OK AND OP90_RH_CMP_OK AND I90_RET_LH_GRIPR_CYL_CLSE AND I90_RET_RH_GRIPR_CYL_CLSE THEN
																////////////////////////////WRITE XTS AS OK/////////////////////////////
 		OP90_STP_NO						:= 50;			
		END_IF
		
	50: IF AFT_GRP_HME.Q THEN
		OP90_A_SRV_LHVERT_HME			:= TRUE;
		OP90_A_SRV_RHVERT_HME			:= TRUE;
		OP90_A_MVR_SUP_VERTP1_HME		:= TRUE;
		OP90_A_MVR_SUP_VERTP1_WRK		:= FALSE;
		OP90_A_MVR_SUP_VERTP2_HME		:= TRUE;
		OP90_A_MVR_SUP_VERTP2_WRK		:= FALSE;		   
 		OP90_STP_NO						:= 55;
		END_IF

	55: IF AFT_VRT_SUP_HME.Q THEN
		OP90_A_MVR_SUP_HORZP1_HME		:= TRUE;
		OP90_A_MVR_SUP_HORZP1_WRK		:= FALSE;
		OP90_A_MVR_SUP_HORZP2_HME		:= TRUE;
		OP90_A_MVR_SUP_HORZP2_WRK		:= FALSE;
 		OP90_STP_NO						:= 60;
		END_IF
	
	60: IF I90_P1_SUP_HORZ_CYL_REV AND I90_P2_SUP_HORZ_CYL_REV AND OP90_SRV_LH_VRT_HME_FB AND OP90_SRV_RH_VRT_HME_FB THEN
		OP90_PROCESS_DONE				:= TRUE;
 		OP90_STP_NO						:= 1;
		END_IF
END_CASE

//////////////////////////////////HORZ/VERT SUP CYL UP//////////////////////////////////////////////
SUP_HORZ_WRK(CLK:=OP90_MVR_IN_POS, Q=> ); 
IF SUP_HORZ_WRK.Q THEN
		IF OP90_POS1 THEN
		OP90_A_MVR_SUP_HORZP1_HME		:= FALSE;
		OP90_A_MVR_SUP_HORZP1_WRK		:= TRUE;
		END_IF
		IF OP90_POS2 THEN 
		OP90_A_MVR_SUP_HORZP2_HME		:= FALSE;
		OP90_A_MVR_SUP_HORZP2_WRK		:= TRUE;
		END_IF
END_IF

SUP_VERT_UP(CLK:=AFT_SUP_HRZ_WRK.Q , Q=> );
IF SUP_VERT_UP.Q THEN
 	   IF OP90_POS1 THEN
		OP90_A_MVR_SUP_VERTP1_HME		:= FALSE;
		OP90_A_MVR_SUP_VERTP1_WRK		:= TRUE;
	   END_IF
	   IF OP90_POS2 THEN
		OP90_A_MVR_SUP_VERTP2_HME		:= FALSE;
		OP90_A_MVR_SUP_VERTP2_WRK		:= TRUE;		   
	   END_IF	
END_IF


/////////////////////////////////////////////DELAY TIMERS///////////////////////////////////////////////////////

AFT_SUP_HRZ_WRK(IN:=(OP90_POS1 AND I90_P1_SUP_HORZ_CYL_FWD ) OR (OP90_POS2 AND I90_P2_SUP_HORZ_CYL_FWD ), PT:=INT_TO_TIME(OP90_AFT_SUP_HRZ_WRK) , Q=> , ET=> );

AFT_VERT_PCK_WRK(IN:=(OP90_LH_CMP_PICKED AND NOT OP90_RH_CMP_PICKED AND OP90_SRV_RH_VRT_PCKWRK_FB) OR (NOT OP90_LH_CMP_PICKED AND  OP90_RH_CMP_PICKED AND OP90_SRV_LH_VRT_PCKWRK_FB) OR 
				(NOT OP90_LH_CMP_PICKED AND NOT OP90_RH_CMP_PICKED AND OP90_SRV_LH_VRT_PCKWRK_FB AND OP90_SRV_RH_VRT_PCKWRK_FB), PT:=INT_TO_TIME(OP90_AFT_VRT_PCK_WRK) , Q=> , ET=> );
				
AFT_PCK_DN(IN:=(OP90_STP_NO =20) AND I90_RET_LH_GRIPR_CYL_OPN AND I90_RET_RH_GRIPR_CYL_OPN, PT:=INT_TO_TIME(OP90_AFT_CMP_PCK) , Q=> , ET=> );

AFT_VRT_PLC_WRK(IN:= (OP90_LH_CMP_OK AND NOT OP90_RH_CMP_OK AND OP90_SRV_LH_VRT_PLCWRK_FB) OR (NOT OP90_LH_CMP_OK AND  OP90_RH_CMP_OK AND OP90_SRV_RH_VRT_PLCWRK_FB)OR
					(OP90_LH_CMP_OK AND OP90_RH_CMP_OK AND OP90_SRV_LH_VRT_PLCWRK_FB AND OP90_SRV_RH_VRT_PLCWRK_FB), PT:=INT_TO_TIME(OP90_AFT_VRT_PLC_WRK) , Q=> , ET=> );
					
AFT_GRP_HME(IN:= OP90_STP_NO =50, PT:=INT_TO_TIME(OP90_AFT_GRP_HME) , Q=> , ET=> );

AFT_VRT_SUP_HME(IN:= (OP90_STP_NO =45) AND I90_P2_SUP_VERT_CYL_DWN AND I90_P1_SUP_VERT_CYL_DWN  , PT:=INT_TO_TIME(OP90_AFT_SUP_VRT_HME) , Q=> , ET=> );
			
ELSE
	OP90_STP_NO							:= 0;
	OP90_A_MVR_SUP_HORZP1_HME			:= FALSE;
    OP90_A_MVR_SUP_HORZP1_WRK           := FALSE;
	OP90_A_MVR_SUP_HORZP2_HME           := FALSE;
	OP90_A_MVR_SUP_HORZP2_WRK           := FALSE;
	OP90_A_MVR_SUP_VERTP1_HME		    := FALSE;
	OP90_A_MVR_SUP_VERTP1_WRK		    := FALSE;
	OP90_A_MVR_SUP_VERTP2_HME		    := FALSE;
	OP90_A_MVR_SUP_VERTP2_WRK           := FALSE;   
	OP90_A_SRV_HORZ_WRK                 := FALSE;
	OP90_A_SRV_HORZ_HME                 := FALSE;
	OP90_A_SRV_LHVERT_HME               := FALSE;
	OP90_A_SRV_LHVERT_PCKWRK            := FALSE;
	OP90_A_SRV_LHVERT_SPLCWRK           := FALSE;
	OP90_A_SRV_LHVERT_PLCWRK            := FALSE;
	OP90_A_SRV_RHVERT_HME               := FALSE;
	OP90_A_SRV_RHVERT_PCKWRK            := FALSE;
	OP90_A_SRV_RHVERT_SPLCWRK           := FALSE;
	OP90_A_SRV_RHVERT_PLCWRK            := FALSE;
	OP90_A_RH_GRP_AUTCMD2				:= FALSE;
	OP90_A_RH_GRP_AUTCMD1				:= FALSE;
	OP90_A_LH_GRP_AUTCMD2				:= FALSE;
	OP90_A_LH_GRP_AUTCMD1				:= FALSE;
	
END_IF

OP90_LH_CMP_OK				:= TRUE;				// CONDITION HAS TO BE GIVEN AFTER CREATING XTS ARRAY
OP90_RH_CMP_OK              := TRUE;				// CONDITION HAS TO BE GIVEN AFTER CREATING XTS ARRAY
OP90_MVR_IN_POS				:= TRUE;				// GIVE ENABLE TO MOVER IN POSITION]]></ST>
    </Implementation>
    <LineIds Name="OP90_AUTO">
      <LineId Id="3" Count="220" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>